--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,51 +1,7 @@
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: 400;
-  color: #444444;
-  background-color: #ffffff;
-}
-
-.visually-hidden {
-  position: absolute;
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-a {
-  text-decoration: none;
-}
-
-.container-body {
-  width: 320px;
-  margin: 0 auto;
-}
+@import "global";
+@import "blocks/main-nav";
+@import "blocks/program__header";
+@import "blocks/program-type";
+@import "blocks/principle-program";
+@import "blocks/slimming-example";
+@import "blocks/page-footer";
