--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,10 @@
 @import "global";
 @import "blocks/main-nav";
-@import "blocks/program__header";
+@import "blocks/program-slogan";
 @import "blocks/program-type";
 @import "blocks/principle-program";
 @import "blocks/slimming-example";
-@import "blocks/page-footer";
+@import "blocks/contact";
+@import "blocks/social";
+@import "blocks/catalog";
+@import "blocks/addition";
