--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -15,7 +15,7 @@
   font-size: 24px;
   line-height: 37px;
   color: #111111;
-  font-weight: inherit;
+  font-weight: bold;
   text-transform: uppercase;
   text-align: center;
 }
@@ -31,6 +31,6 @@
   font-size: 16px;
   line-height: 16px;
   color: #111111;
-  font-weight: inherit;
+  font-weight: bold;
   text-transform: uppercase;
 }
