--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
 @import "global";
 @import "blocks/main-nav";
 @import "blocks/program-slogan";
-@import "blocks/program-type";
+@import "blocks/compilation-list";
 @import "blocks/principle-program";
 @import "blocks/slimming-example";
 @import "blocks/contact";
