--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -1,5 +1,3 @@
-
-
 .addition__subtitle {
   font-size: 24px;
   line-height: 24px;
@@ -23,6 +21,14 @@
   line-height: 14px;
   color: #444444;
   font-weight: 400;
+}
+
+.button {
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  font-weight: 400;
+  background-color: #68b738;
 }
 
 .catalog__bonus {
