--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -44,7 +44,15 @@
   color: #111111;
 }
 
-.button--all {
+.button {
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  font-weight: 400;
+  background-color: #68b738;
+}
+
+.button--all {   /*Как сделать так, чтоб на данные стили переопределялась?*/
   color: #444444;
   background-color: #f2f2f2;
 }
