--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -1,3 +1,7 @@
+.page-footer__wrapper {   /*не ясно, к какому классу применять, page-footer или page-footer__wrapper?*/
+  background-color: #f2f2f2;
+}
+
 .contacts__title {
   font-size: 16px;
   line-height: 20px;
