--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,31 +5,6 @@
   font-weight: 700;
 }
 
-.product-list__item {
-  list-style: none;
-}
-
-.product-list__item-title {
-  font-size: 16px;
-  line-height: 20px;
-  color: #111111;
-  font-weight: 700;
-}
-
-.product-list__cell {
-  font-size: 12px;
-  line-height: 16px;
-  color: #444444;
-  font-weight: 400;
-}
-
-.product-list__cell--value {
-  font-size: 12px;
-  line-height: 16px;
-  color: #444444;
-  font-weight: 400;
-}
-
 .catalog__other-subtitle {
   font-size: 16px;
   line-height: 20px;
@@ -44,15 +19,15 @@
   color: #111111;
 }
 
-.button {
+.catalog__bonus {
+  background-image: url("../../img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.catalog__bonus-title {
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
   font-weight: 400;
-  background-color: #68b738;
-}
-
-.button--all {   /*Как сделать так, чтоб на данные стили переопределялась?*/
-  color: #444444;
-  background-color: #f2f2f2;
 }
