--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,4 +1,8 @@
 .button {
+  display: inline-block;
+  padding: 14px 73px;
+  text-align: center;
+  vertical-align: middle;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
