--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,7 @@
 @import "global";
+@import "blocks/variables";
+@import "blocks/container";
+@import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
 @import "blocks/program";
