--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,9 @@
 .page-header__logo-image {
   margin: 10px 20px;
 }
+
+@media (min-width: $tablet-width) {
+  .page-header {
+    display: flex;
+  }
+}
