--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,3 +1,25 @@
+
+.site-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .site-list {
+    justify-content: space-between;
+    flex-direction: row;
+    width: 440px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .site-list {
+    width: 480px;
+  }
+}
+
 .site-list__item {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -12,4 +34,20 @@
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .site-list__item a {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: normal;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .site-list__item a {
+    font-size: 20px;
+    line-height: 25px;
+    color: #ffffff;
+  }
 }
