--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -2,3 +2,15 @@
   width: 320px;
   margin: 0 auto;
 }
+
+@media (min-width: $tablet-width) {
+  .container {
+    width: 708px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container {
+    width: 1220px;
+  }
+}
