--- a/source/sass/blocks/principle-program.scss
+++ b/source/sass/blocks/principle-program.scss
@@ -1,8 +1,19 @@
+.principle-program__text {
+  width: 185px;
+}
+
 .principle-program__slogan {
   font-size: 36px;
   line-height: 60px;
   color: #111111;
   font-weight: bold;
+  text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .principle-program__slogan {
+    text-align: start;
+  }
 }
 
 .principle-program__text {
@@ -10,4 +21,11 @@
   line-height: 18px;
   color: #444444;
   font-weight: normal;
+  text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .principle-program__text {
+    width: 250px;
+  }
 }
