--- a/source/sass/blocks/slimming-example.scss
+++ b/source/sass/blocks/slimming-example.scss
@@ -1,13 +1,21 @@
+.slimming-example {
+  background-color: #f2f2f2;
+}
+
 .slimming-example__title {
   font-size: 36px;
   line-height: 60px;
   color: #111111;
   font-weight: bold;
+  text-align: center;
 }
 
 .slimming-example__text {
+  width: 280px;
+  margin: 0 auto;
   font-size: 14px;
   line-height: 18px;
   color: #444444;
   font-weight: normal;
+  text-align: center;
 }
