--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,9 +10,9 @@
 @import "blocks/compilation-list";
 @import "blocks/principle-program";
 @import "blocks/slimming-example";
-@import "blocks/page-footer";
 @import "blocks/contact";
 @import "blocks/social";
+@import "blocks/copyright";
 @import "blocks/catalog";
 @import "blocks/product-list";
 @import "blocks/addition";
