--- a/source/sass/blocks/compilation-list.scss
+++ b/source/sass/blocks/compilation-list.scss
@@ -12,7 +12,8 @@
 .compilation-list__item {
   box-sizing: border-box;
   width: 320px;
-  padding: 75px 25px;
+  margin-bottom: 20px;
+  padding: 40px 20px 25px;
   background-color: #f2f2f2;
   list-style: none;
 }
@@ -20,6 +21,7 @@
 @media (min-width: $tablet-width) {
   .compilation-list__item {
     width: 710px;
+    margin-bottom: 30px;
     padding: 40px 20px;
   }
 }
@@ -27,8 +29,8 @@
 @media (min-width: $desktop-width) {
   .compilation-list__item {
     width: 570px;
-    margin-right: 80px;
-    padding: 80px 50px;
+    margin: 0 80px 0 0;
+    padding: 75px 25px 60px;
   }
 }
 
