--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -1,4 +1,16 @@
+.contacts {
+  display: flex;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts {
+    justify-content: space-between;
+  }
+}
+
 .contacts__title {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 20px;
   color: #111111;
@@ -6,9 +18,23 @@
   text-transform: uppercase;
 }
 
+@media (min-width: $tablet-width) {
+  .contacts__title {
+    width: 160px;
+  }
+}
+
 .contacts__text {
+  margin: 0;
+  padding: 0;
   font-size: 14px;
   line-height: 20px;
   color: #444444;
   font-weight: normal;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__text {
+    width: 160px;
+  }
 }
