--- a/source/sass/blocks/principle-program.scss
+++ b/source/sass/blocks/principle-program.scss
@@ -1,31 +1,60 @@
-.principle-program__text {
-  width: 185px;
-}
-
 .principle-program__slogan {
+  margin: 0;
+  padding: 0;
   font-size: 36px;
   line-height: 60px;
   color: #111111;
   font-weight: bold;
-  text-align: center;
+  text-align: start;
+}
+
+.principle-program__item {
+  margin: 0;
+  padding: 0 0 0 80px;
+  list-style: none;
 }
 
 @media (min-width: $tablet-width) {
-  .principle-program__slogan {
+  .principle-program__item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 708px;
+    margin-bottom: -100px;
+    padding: 180px 0 0;
     text-align: start;
   }
 }
 
+@media (min-width: $desktop-width) {
+  .principle-program__item {
+    flex-wrap: nowrap;
+    width: 1220px;
+    padding: 170px 0 130px;
+  }
+}
+
 .principle-program__text {
+  width: 185px;
+  margin: 0;
+  padding-bottom: 20px;
   font-size: 14px;
   line-height: 18px;
   color: #444444;
   font-weight: normal;
-  text-align: center;
+  text-align: start;
 }
 
 @media (min-width: $tablet-width) {
   .principle-program__text {
-    width: 250px;
+    width: 260px;
+    margin-bottom: 250px;
+    padding: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .principle-program__text {
+    margin: 0 80px 0 0;
+    padding: 0;
   }
 }
