Устранение замечаний по index

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -3,6 +3,12 @@
   justify-content: space-between;
 }
 
+@media (min-width: $tablet-width) {
+  .copyright__link {
+    justify-content: inherit;
+  }
+}
+
 .copyright__img {
   height: 34px;
 }
