--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,16 +1,19 @@
 .container {
-  width: 320px;
+  width: 280px;
+  padding: 0 20px;
   margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
   .container {
-    width: 708px;
+    width: 648px;
+    padding: 0 30px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .container {
-    width: 1220px;
+    width: 1140px;
+    padding: 0 40px;
   }
 }
