--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,12 +5,14 @@
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
+@import "blocks/program";
 @import "blocks/program-slogan";
 @import "blocks/program-type";
 @import "blocks/compilation-list";
 @import "blocks/principle-program";
 @import "blocks/slimming-example";
 @import "blocks/contact";
+@import "blocks/page-footer";
 @import "blocks/social";
 @import "blocks/copyright";
 @import "blocks/catalog";
