--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -14,13 +14,15 @@
   font-size: 16px;
   line-height: 20px;
   color: #111111;
-  font-weight: bold;
+  font-weight: inherit;
   text-transform: uppercase;
 }
 
 @media (min-width: $tablet-width) {
   .contacts__title {
     width: 160px;
+    font-size: 20px;
+    line-height: 25px;
   }
 }
 
@@ -36,5 +38,7 @@
 @media (min-width: $tablet-width) {
   .contacts__text {
     width: 160px;
+    font-size: 16px;
+    line-height: 20px;
   }
 }
