--- a/source/sass/blocks/slimming-example.scss
+++ b/source/sass/blocks/slimming-example.scss
@@ -29,7 +29,14 @@
   font-size: 36px;
   line-height: 60px;
   color: #111111;
-  font-weight: bold;
+  font-weight: inherit;
+}
+
+@media (min-width: $tablet-width) {
+  .slimming-example__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .slimming-example__text {
@@ -46,6 +53,8 @@
   .slimming-example__text {
     width: 710px;
     margin: 0;
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 
