--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,24 +1,30 @@
 .main-nav {
-  position: relative;
+  flex-direction: column;
+
 }
 
 .main-nav__toggle {
-  border: 0;
-  background-color: transparent;
-}
-
-.main-nav__toggle::before {
-  content: "";
-  position: absolute;
+  position: relative;
   width: 24px;
   height: 18px;
-  background-image: url("../img/icon-mobile-menu.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  border: 0;
+  background-color: transparent;
 }
 
 @media (min-width: $tablet-width) {
   .main-nav__toggle {
     display: none;
   }
+}
+
+.main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 18px;
+  background-image: url("../img/icon-mobile-menu.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
