--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,8 +1,8 @@
 .catalog__subtitle {
-  font-size: 30px;
+  font-size: 36px;
   line-height: 60px;
   color: #111111;
-  font-weight: 700;
+  font-weight: inherit;
 }
 
 .catalog__other-subtitle {
