--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -1,8 +1,30 @@
 .product-list__item {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
+@media (min-width: $tablet-width) {
+  .product-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+  }
+
+  .product-list__item {
+    width: 325px;
+    margin-right: 29px;
+  }
+}
+
+.product-list__wrapper {
+  display: flex;
+}
+
 .product-list__item-title {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 20px;
   color: #111111;
