--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -1,21 +1,12 @@
+.product-list {
+  margin: 0;
+  padding: 0;
+}
+
 .product-list__item {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-@media (min-width: $tablet-width) {
-  .product-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-  }
-
-  .product-list__item {
-    width: 325px;
-    margin-right: 29px;
-  }
 }
 
 .product-list__wrapper {
@@ -43,4 +34,45 @@
   line-height: 16px;
   color: #444444;
   font-weight: 400;
+}
+
+@media (min-width: $tablet-width) {
+  .product-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+  }
+
+  .product-list__item {
+    width: 325px;
+    margin-right: 29px;
+  }
+
+  .product-list__wrapper {
+    display: block;
+  }
+
+  .product-list__item-title {
+    text-align: center;
+  }
+
+  .product-list__cell {
+    font-size: 16px;
+    width: 260px;
+  }
+
+  .product-list__table {
+    text-align: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product-list__item {
+    width: 245px;
+  }
+
+  .product-list__cell {
+    width: 175px;
+  }
 }
