--- a/source/sass/blocks/extra-list.scss
+++ b/source/sass/blocks/extra-list.scss
@@ -11,7 +11,8 @@
   font-size: 16px;
   line-height: 16px;
   color: #222222;
-  font-weight: 700;
+  font-weight: inherit;
+  text-transform: uppercase;
 }
 
 .extra-list__value {
@@ -19,4 +20,24 @@
   line-height: 14px;
   color: #444444;
   font-weight: 400;
+}
+
+@media (min-width: $tablet-width) {
+.extra-list__item-title {
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+  .extra-list__value {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+.extra-list__item-title {
+  font-size: 20px;
+  text-transform: uppercase;
+}
 }
