--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,3 +1,7 @@
+.page-footer__wrapper {
+  background-color: #f2f2f2;
+}
+
 .page-footer__main-img {
   display: flex;
   height: 25px;
@@ -6,6 +10,10 @@
 }
 
 @media (min-width: $tablet-width) {
+  .page-footer__wrapper {
+    display: flex;
+  }
+
   .page-footer__item {
     display: flex;
   }
