--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -28,6 +28,10 @@
     width: 440px;
   }
 
+  .site-list__item {
+    padding-top: 8px;
+  }
+
   .site-list__item a {
     font-size: 18px;
     line-height: 24px;
