--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -2,6 +2,10 @@
   background-color: #f2f2f2;
 }
 
+.page-footer__social-wrapper {
+  display: block;
+}
+
 .page-footer__main-img {
   display: flex;
   height: 25px;
@@ -10,11 +14,11 @@
 }
 
 @media (min-width: $tablet-width) {
-  .page-footer__wrapper {
+  .page-footer__item {
     display: flex;
   }
 
-  .page-footer__item {
+  .page-footer__social-wrapper {
     display: flex;
   }
 }
