--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -2,7 +2,7 @@
   font-size: 36px;
   line-height: 60px;
   color: #111111;
-  font-weight: inherit;
+  font-weight: 400;
 }
 
 .catalog__other-subtitle {
