--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,9 +1,18 @@
+.copyright {
+  padding: 0;
+}
+
 .copyright__link {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 @media (min-width: $tablet-width) {
+  .copyright {
+    width: 160px;
+  }
+
   .copyright__link {
     justify-content: inherit;
   }
