--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -2,7 +2,7 @@
   font-size: 24px;
   line-height: 24px;
   color: #111111;
-  font-weight: inherit;
+  font-weight: 400;
 }
 
 @media (min-width: $tablet-width) {
