--- a/source/sass/blocks/compilation-list.scss
+++ b/source/sass/blocks/compilation-list.scss
@@ -16,7 +16,7 @@
   font-size: 24px;
   line-height: 37px;
   color: #111111;
-  font-weight: inherit;
+  font-weight: 400;
   text-transform: uppercase;
   text-align: center;
 }
@@ -25,7 +25,7 @@
   font-size: 14px;
   line-height: 18px;
   color: #444444;
-  font-weight: inherit;
+  font-weight: 400;
 }
 
 .compilation-list__link {
@@ -44,7 +44,7 @@
 
   .compilation-list__item-title {
     margin: 0;
-    text-align: start;
+    text-align: left;
     font-size: 36px;
     line-height: 37px;
   }
