--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -8,7 +8,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #111111;
-  font-weight: inherit;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
