--- a/source/sass/blocks/extra-list.scss
+++ b/source/sass/blocks/extra-list.scss
@@ -11,7 +11,7 @@
   font-size: 16px;
   line-height: 16px;
   color: #222222;
-  font-weight: inherit;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
