--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -2,8 +2,15 @@
   background-color: #f2f2f2;
 }
 
-.page-footer__social-wrapper {
+.page-footer__content {
   display: block;
+}
+
+.page-footer__main-link {
+  display: block;
+  width: 130px;
+  height: 25px;
+  margin: 0 auto;
 }
 
 .page-footer__main-img {
@@ -18,7 +25,7 @@
     display: flex;
   }
 
-  .page-footer__social-wrapper {
+  .page-footer__content {
     display: flex;
   }
 }
