--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -26,6 +26,10 @@
 }
 
 @media (min-width: $desktop-width) {
+  .page-header {
+    display: flex;
+  }
+
   .page-header__logo {
     margin-right: 540px;
   }
