--- a/source/sass/blocks/principle-program.scss
+++ b/source/sass/blocks/principle-program.scss
@@ -4,25 +4,25 @@
   font-size: 36px;
   line-height: 60px;
   color: #111111;
-  font-weight: inherit;
-  text-align: start;
+  font-weight: 400;
+  text-align: left;
 }
 
 .principle-program__list {
   margin: 0;
-  padding: 0 0 0 80px;
+  padding: 0;
   list-style: none;
 }
 
 .principle-program__text {
   width: 185px;
+  margin: 0 0 20px 0;
+  padding: 0 0 0 80px;
+  text-align: left;
+}
+
+.principle-program__text:nth-child(4n) {
   margin: 0;
-  padding-bottom: 20px;
-  font-size: 14px;
-  line-height: 18px;
-  color: #444444;
-  font-weight: normal;
-  text-align: start;
 }
 
 @media (min-width: $tablet-width) {
@@ -34,30 +34,35 @@
   .principle-program__list {
     display: flex;
     flex-wrap: wrap;
-    width: 708px;
-    margin-bottom: -100px;
-    padding: 180px 0 0;
-    text-align: start;
+    margin-bottom: 150px;
   }
 
   .principle-program__text {
     width: 260px;
-    margin-bottom: 250px;
-    padding: 0;
+    padding: 180px 0 0;
     font-size: 16px;
     line-height: 24px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .principle-program__slogan {
+    padding: 0 0 170px;
+  }
+
   .principle-program__list {
     flex-wrap: nowrap;
     width: 1220px;
-    padding: 170px 0 130px;
+    margin: 0;
+    padding: 0 0 130px;
   }
 
   .principle-program__text {
     margin: 0 80px 0 0;
     padding: 0;
+  }
+
+  .principle-program__text:nth-child(4n) {
+    margin: 0;
   }
 }
