--- a/source/sass/blocks/program-slogan.scss
+++ b/source/sass/blocks/program-slogan.scss
@@ -23,7 +23,7 @@
 
 @media (min-width: $tablet-width) {
   .program-slogan__wrapper {
-    width: 490px;
+    width: 530px;
   }
 
   .program-slogan__title {
@@ -33,8 +33,8 @@
     font-size: 60px;
     line-height: 60px;
     color: #111111;
-    font-weight: inherit;
-    text-align: start;
+    font-weight: 400;
+    text-align: left;
   }
 
   .program-slogan__text {
