--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,8 +1,14 @@
 .social__list {
   display: flex;
   justify-content: center;
-  margin: 0 -40px 0 0;
+  flex-wrap: wrap;
+  align-items: center;
   padding: 0;
+  margin: 0 auto;
+}
+
+.social__item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .social__item {
