--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,21 +1,18 @@
 @font-face {
   font-family: "Oswald";
-  src: url("../fonts/oswald-regular-webfont.woff2") format('woff2'),
-  url("../fonts/oswald-regular-webfont.woff") format('woff');
+  src: url("../fonts/oswald-regular-webfont.woff2") format("woff2");
+  src: url("../fonts/oswald-regular-webfont.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Oswald";
-  src: url("../fonts/oswald-bold-webfont.woff2") format('woff2'),
-  url("../fonts/oswald-bold-webfont.woff") format('woff');
+  src: url("../fonts/oswald-bold-webfont.woff2") format("woff2");
+  src: url("../fonts/oswald-bold-webfont.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
-
-$tablet-width: 768px;
-$desktop-width: 1300px;
 
 body {
   margin: 0;
@@ -50,5 +47,3 @@ img {
 a {
   text-decoration: none;
 }
-
-
