--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
 @import "global";
+@import "varriable";
 @import "blocks/container";
 @import "blocks/button";
 @import "blocks/page-header";
@@ -6,7 +7,6 @@
 @import "blocks/site-list";
 @import "blocks/program";
 @import "blocks/program-slogan";
-@import "blocks/program-type";
 @import "blocks/compilation-list";
 @import "blocks/principle-program";
 @import "blocks/slimming-example";
