--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -13,6 +13,12 @@
   display: block;
 }
 
+.product-list__item-link {
+  display: block;
+  width: 140px;
+  height: 144px;
+}
+
 .product-list__item-title {
   margin: 0;
   padding: 0;
