--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -26,13 +26,13 @@ body {
   min-width: 320px;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active) {
   position: absolute;
-  height: 1px;
   width: 1px;
+  height: 1px;
   margin: -1px;
-  padding: 0;
   border: 0;
+  padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
