--- a/source/sass/blocks/compilation-list.scss
+++ b/source/sass/blocks/compilation-list.scss
@@ -64,13 +64,13 @@
   .compilation-list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -80px;
+    margin-left: -80px;
   }
 
   .compilation-list__item {
     box-sizing: border-box;
     width: 570px;
-    margin: 0 80px 0 0;
+    margin: 0 0 0 80px;
   }
 
   .compilation-list__item-title {
