--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,7 +1,6 @@
 .social__list {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   align-items: center;
   padding: 0;
   margin: 0 auto;
@@ -26,7 +25,7 @@
   height: 28px;
 }
 
-.social__item:nth-child(3n) {
+.social__item:last-child {
   margin-right: 0;
 }
 
