--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/slimming-example";
 @import "blocks/contact";
 @import "blocks/page-footer";
+@import "blocks/map";
 @import "blocks/social";
 @import "blocks/copyright";
 @import "blocks/catalog";
