--- a/source/sass/blocks/compilation-list.scss
+++ b/source/sass/blocks/compilation-list.scss
@@ -4,21 +4,69 @@
 }
 
 .compilation-list__item {
+  position: relative;
   margin-bottom: 20px;
   background-color: #f2f2f2;
   list-style: none;
   padding: 40px 20px 20px;
 }
 
+.compilation-list__item-slim::before {
+  content: "";
+  position: absolute;
+  top: 22px;
+  left: 30px;
+  width: 35px;
+  height: 49px;
+  background-image: url("../../img/icon-cat-slim.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  z-index: 2;
+}
+
+.compilation-list__item-slim::after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 22px;
+  width: 50px;
+  height: 51px;
+  border-radius: 50%;
+  background-color: #68b738;
+}
+
+.compilation-list__item-pro::before {
+  content: "";
+  position: absolute;
+  top: 35px;
+  left: 15px;
+  width: 67px;
+  height: 28px;
+  background-image: url("../../img/icon-cat-pro.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  z-index: 2;
+}
+
+.compilation-list__item-pro::after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 22px;
+  width: 50px;
+  height: 51px;
+  border-radius: 50%;
+  background-color: #68b738;
+}
+
 .compilation-list__item-title {
-  margin: 0 0 0 75px;
+  margin: 0 0 0 72px;
   padding: 0;
   font-size: 24px;
   line-height: 37px;
   color: #111111;
   font-weight: 400;
   text-transform: uppercase;
-  text-align: center;
 }
 
 .compilation-list__text {
