--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -1,8 +1,9 @@
 .program__header {
-  background-image: url("../../img/index-can-mobile@1x.png"), url("../../img/index-background-mobile@1x.jpg");
-  background-repeat: no-repeat, no-repeat;
-  background-position: 50% 0, 50% 0;
-  background-color: #63a73a;
+  margin: 0 0 135px;
+  background-image: url("../../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position:50% 0;
+  background-color: #65a93c;
 }
 
 @media (min-width: $tablet-width) {
