--- a/source/sass/blocks/program-slogan.scss
+++ b/source/sass/blocks/program-slogan.scss
@@ -39,6 +39,16 @@
   background-position: 0 0;
 }
 
+.program-slogan__button:hover {
+  background-color: #5eaa2f;
+}
+
+.program-slogan__button:active {
+  background-color: #5eaa2f;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+
 @media (min-width: $tablet-width) {
   .program-slogan__wrapper {
     width: 530px;
