--- a/source/sass/blocks/compilation-list.scss
+++ b/source/sass/blocks/compilation-list.scss
@@ -60,7 +60,7 @@
 }
 
 .compilation-list__item-title {
-  margin: 0 0 0 72px;
+  margin: 0 0 35px 72px;
   padding: 0;
   font-size: 24px;
   line-height: 37px;
@@ -70,6 +70,7 @@
 }
 
 .compilation-list__text {
+  margin: 0 0 40px 0;
   font-size: 14px;
   line-height: 18px;
   color: #444444;
@@ -77,11 +78,64 @@
 }
 
 .compilation-list__link {
+  position: relative;
   display: block;
   font-size: 16px;
   line-height: 16px;
   color: #111111;
   text-transform: uppercase;
+  }
+
+.compilation-list__link:active {
+  color: rgba(17, 17, 17, 0.3);
+}
+
+.compilation-list__link::after {
+  content: "";
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 240px;
+  height: 1px;
+  background-color: rgba(17, 17, 17, 0.1);
+
+}
+
+.compilation-list__link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 95px;
+  width: 24px;
+  height: 11px;
+  background-image: url(../../img/icon-right-arrow-long.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.compilation-list__link:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 95px;
+  width: 33px;
+  height: 11px;
+  background-image: url(../../img/icon-right-arrow-verylong.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.compilation-list__link:active::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 95px;
+  width: 33px;
+  height: 11px;
+  background-image: url(../../img/icon-right-arrow-verylong.svg);
+  opacity: 0.3;
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 @media (min-width: $tablet-width) {
