--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -1,10 +1,12 @@
 .contacts {
   display: flex;
+  padding: 25px 0 25px;
 }
 
 .contacts__title {
-  margin: 0;
+  margin: 0 19px 0 0;
   padding: 0;
+  width: 125px;
   font-size: 16px;
   line-height: 20px;
   color: #111111;
@@ -15,6 +17,7 @@
 .contacts__text {
   margin: 0;
   padding: 0;
+  width: 140px;
   font-size: 14px;
   line-height: 20px;
   color: #444444;
