--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,6 @@
 .page-header {
   padding-top: 10px;
+  margin-bottom: 20px;
 }
 
 .page-header__logo {
@@ -19,7 +20,7 @@
   width: 192px;
 }
 
-.page-header__logo-link-other:focus {
+.page-header__logo-link-other:hover {
   opacity: 0.8;
 }
 
