--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -13,6 +13,10 @@
   border-top: 1px solid #e6e6e6;
 }
 
+.site-list__item:last-child {
+  border-bottom: 1px solid #e6e6e6;
+}
+
 .site-list__item a {
   display: block;
   font-size: 20px;
