--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,3 +15,13 @@
   color: #444444;
   background-color: #f2f2f2;
 }
+
+.button--all:hover {
+  color: #444444;
+  background-color: #ebebeb;
+}
+
+.button--all:active {
+  color: rgba(68, 68, 68, 0.3);
+  background-color: #ebebeb;
+}
