--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -12,6 +12,7 @@
 }
 
 .product-list__item:last-child {
+  padding: 75px 0 20px;
   border-bottom: 1px solid #ededed;
 }
 
@@ -62,6 +63,15 @@
   line-height: 16px;
   color: #444444;
   font-weight: 400;
+}
+
+.product-list__button:hover {
+  background-color: #5eaa2f;
+}
+
+.product-list__button:active {
+  background-color: #5eaa2f;
+  color: rgba(255, 255, 255, 0.3);
 }
 
 @media (min-width: $tablet-width) {
