--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -12,7 +12,7 @@
   font-weight: 400;
 }
 
-.addition__subtitle:before {
+.addition__subtitle::before {
   content: "";
   position: absolute;
   top: 10px;
