--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -51,6 +51,10 @@
     border-bottom: 2px solid #68b738;
   }
 
+  .site-list__item:last-child {
+    border-bottom: none;
+  }
+
   .site-list__item a {
     font-size: 18px;
     line-height: 24px;
