--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -8,9 +8,8 @@
 
 @media (min-width: $tablet-width) {
   .program__header {
-    background-image: url("../../img/index-can-mobile@1x.png");
-    background-repeat: no-repeat;
-    background-position: 50% 0;
+    margin: 0;
+    background-image:none;
     background-color: #ffffff;
   }
 }
