--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/site-list";
 @import "blocks/program";
 @import "blocks/program-slogan";
+@import "blocks/program-type";
 @import "blocks/compilation-list";
 @import "blocks/principle-program";
 @import "blocks/slimming-example";
