--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -44,3 +44,14 @@
   list-style: none;
   margin-right: 40px;
 }
+
+@media (min-width:$tablet-width ) {
+  .social__list {
+    border: none;
+  }
+
+  .social__link {
+    margin: 0;
+  }
+
+}
